@@ -9,8 +9,9 @@ Changes in version 1.11
 - Modified the check-fqdn plugin to append $DEFAULTHOST and
   $DEFAULTDOMAIN to addresses if necessary.
 
-- Added separate connect and send timeouts to the ClamAV plugin, and
-  fixed a bug with handling port numbers when using multiple IPs.
+- Added separate connect and send timeouts and a maximum message size to
+  the ClamAV plugin, and fixed a bug with handling port numbers when
+  using multiple IPs.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
